--- a/views/header.jade
+++ b/views/header.jade
@@ -15,8 +15,8 @@ header
           ul.nav.navbar-nav.navbar-right
             if sessionUser == null
               // ログインしていない
-              li
-                a(href="/reception") 新規登録
+              //li
+              //  a(href="/reception") 新規登録
               li
                 a(href="/login") ログイン
             else
